--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Skwiera Magic's Portfolio</title>
+    <style>
+      body {
+        background-image: url("https://github.com/Skwiera-Magic/portfolio/blob/main/images/02-portfolio-4.jpg?raw=true");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
